--- a/StudentskaSluzba/StudentskaSluzba/View/CreateStudent.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreateStudent.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="CreateStudent" Height="600" Width="400">
+        Title="CreateStudent" Height="600" Width="400"
+        WindowStartupLocation="CenterScreen">
     <Window.Resources>
         <ControlTemplate x:Key="ValidationTemplate">
             <StackPanel>
