--- a/StudentskaSluzba/StudentskaSluzba/View/CreatePredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/CreatePredmet.xaml
@@ -7,6 +7,16 @@
         mc:Ignorable="d"
         Title="Dodavanje predmeta" Height="425" Width="400"
         WindowStartupLocation="CenterScreen" >
+    <Window.Resources>
+        <ControlTemplate x:Key="ValidationTemplate">
+            <StackPanel>
+                <!-- Placeholder for the TextBox itself -->
+                <AdornedElementPlaceholder x:Name="textBox" />
+                <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red" />
+            </StackPanel>
+
+        </ControlTemplate>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="400"></RowDefinition>
@@ -30,22 +40,32 @@
             <Label Grid.Row="2" Grid.Column="0" Height="30">Semestar</Label>
             <Label Grid.Row="3" Grid.Column="0" Height="30">Godina</Label>
             <Label Grid.Row="4" Grid.Column="0" Height="30">ESPB</Label>
-            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Path=Naziv, UpdateSourceTrigger=PropertyChanged}"
-                     Height="30"></TextBox>
-            <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Path=Sifra, UpdateSourceTrigger=PropertyChanged}"
-                     Height="30"></TextBox>
-            <ComboBox Grid.Row="2" Grid.Column="1" Height="30">
-                <ComboBoxItem>Zimski</ComboBoxItem>
-                <ComboBoxItem>Letnji</ComboBoxItem>
+            <TextBox Grid.Row="0" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Premet.Naziv, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Premet.Sifra, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
+            <ComboBox SelectedValuePath="Content" x:Name="comboBoxSemestar" Grid.Row="2" Grid.Column="1" Height="25"
+                     SelectedValue="{Binding Path=Predmet.Semestar, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <ComboBoxItem FontSize="10" Tag="1">Zimski</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="2">Letnji</ComboBoxItem>
             </ComboBox>
-            <ComboBox Grid.Row="3" Grid.Column="1" Height="30">
-                <ComboBoxItem>I (Prva)</ComboBoxItem>
-                <ComboBoxItem>II (Druga)</ComboBoxItem>
-                <ComboBoxItem>III (Treca)</ComboBoxItem>
-                <ComboBoxItem>IV (Cetvrta)</ComboBoxItem>
+            <ComboBox SelectedValuePath="Content" x:Name="comboBoxGodina" Grid.Row="3" Grid.Column="1" Height="25"
+                     SelectedValue="{Binding Path=Predmet.Godina, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <ComboBoxItem FontSize="10" Tag="1">I (prva)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="2">II (druga)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="3">III (treća)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="4">IV (četvrta)</ComboBoxItem>
             </ComboBox>
-            <TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Path=ESPB, UpdateSourceTrigger=PropertyChanged}"
-                     Height="30"></TextBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Premet.BrojESPB, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
         </Grid>
         <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
             <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50, -30, 20, 5" Click="CancelButton_Click"/>
