--- a/StudentskaSluzba/StudentskaSluzba/View/EditPredmet.xaml
+++ b/StudentskaSluzba/StudentskaSluzba/View/EditPredmet.xaml
@@ -5,8 +5,73 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:StudentskaSluzba.View"
         mc:Ignorable="d"
-        Title="EditPredmet" Height="450" Width="800">
+        Title="Izmena predmeta" Height="450" Width="400"
+        WindowStartupLocation="CenterScreen" >
+    <Window.Resources>
+        <ControlTemplate x:Key="ValidationTemplate">
+            <StackPanel>
+                <!-- Placeholder for the TextBox itself -->
+                <AdornedElementPlaceholder x:Name="textBox" />
+                <TextBlock Text="{Binding [0].ErrorContent}" Foreground="Red" />
+            </StackPanel>
+
+        </ControlTemplate>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="400"></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+
+        <Grid Grid.Row="0" Grid.Column="0" Width="300" Height="330">
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Label Grid.Row="0" Grid.Column="0" Height="30">Naziv</Label>
+            <Label Grid.Row="1" Grid.Column="0" Height="30">Šifra</Label>
+            <Label Grid.Row="2" Grid.Column="0" Height="30">Semestar</Label>
+            <Label Grid.Row="3" Grid.Column="0" Height="30">Godina</Label>
+            <Label Grid.Row="4" Grid.Column="0" Height="30">ESPB</Label>
+            <Label Grid.Row="5" Grid.Column="0" Height="30">Profesor</Label>
+            <TextBox Grid.Row="0" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Predmet.Naziv, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Predmet.Sifra, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
+            <ComboBox SelectedValuePath="Content" x:Name="comboBoxSemestar" Grid.Row="2" Grid.Column="1" Height="25"
+                     SelectedValue="{Binding Path=Predmet.Semestar, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <ComboBoxItem FontSize="10" Tag="1">Zimski</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="2">Letnji</ComboBoxItem>
+            </ComboBox>
+            <ComboBox SelectedValuePath="Content" x:Name="comboBoxGodina" Grid.Row="3" Grid.Column="1" Height="25"
+                     SelectedValue="{Binding Path=Predmet.GodinaStudija, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+                <ComboBoxItem FontSize="10" Tag="1">I (prva)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="2">II (druga)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="3">III (treća)</ComboBoxItem>
+                <ComboBoxItem FontSize="10" Tag="4">IV (četvrta)</ComboBoxItem>
+            </ComboBox>
+            <TextBox Grid.Row="4" Grid.Column="1" Height="20"
+                     Text="{Binding Path=Predmet.BrojESPB, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                     Validation.ErrorTemplate="{StaticResource ValidationTemplate}">
+            </TextBox>
+        </Grid>
+        <WrapPanel Grid.Row="1" FlowDirection="RightToLeft">
+            <Button Content="Odustani" IsCancel="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="50, -30, 20, 5" Click="CancelButton_Click"/>
+            <Button Content="Potvrdi" IsDefault="True" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20, -30, 20, 5" Click="CreatePredmet_Click"/>
+        </WrapPanel>
     </Grid>
 </Window>
